--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentTop="true"
 	    android:layout_marginTop="14dp"
-	    android:text="0.0"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />
     	
     <LinearLayout
@@ -56,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/linearLayout1"
+        android:layout_alignRight="@+id/linearLayout1"
         android:layout_below="@+id/linearLayout1"
         android:layout_weight="1"
         android:orientation="horizontal" >
@@ -77,6 +77,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3" />
+
+        <Button
+            android:id="@+id/clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="C" />
+
     </LinearLayout>
 
     <LinearLayout
