--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,9 +1,12 @@
 <!-- 
 Author: Björn Kristensson Alfsson
-Version: 1.2
-Date: 2014-06-27 
+Version: 1.3
+Date: 2014-06-28 
 Description: Simple android calculator. Built for learning purposes. Need a lot of work to make smaller methods.
-Just finished a basic addition calculator for now. Going to change around to add minus, multiplication and dividing later.
+Finished the simple calculations. not possible to use more then one operator.
+
+Thought to add:
+Textview with inputted algorithm to be calculated when finished.
  -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -176,29 +179,6 @@ Just finished a basic addition calculator for now. Going to change around to add
             android:layout_height="wrap_content"
             android:text="=" />
     </LinearLayout>
-	<!-- Delete number1 to number 3 when finished -->
-        <TextView
-            android:id="@+id/number1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/linearLayout5"
-            android:layout_below="@+id/linearLayout5"
-            android:layout_marginTop="44dp" />
 
-        <TextView
-            android:id="@+id/number2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/number1"
-            android:layout_alignBottom="@+id/number1"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:id="@+id/number3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/number2"
-            android:layout_alignBottom="@+id/number2"
-            android:layout_alignRight="@+id/textView1" />
 
 </RelativeLayout>
