--- a/res/layout/about_this_application.xml
+++ b/res/layout/about_this_application.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 
+Author: Björn Kristensson Alfsson
+Version: 1.3
+Date: 2014-06-28
+Last updated: 2014-06-30 
+Description: Just an popup window with information for the calculator.
+ -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/popup_element"
     android:layout_width="match_parent"
