--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <!-- 
 Author: Björn Kristensson Alfsson
 Version: 1.3
-Date: 2014-06-28 
+Date: 2014-06-28
+Last updated: 2014-06-30 
 Description: Simple android calculator. Built for learning purposes. Need a lot of work to make smaller methods.
 Finished the simple calculations. not possible to use more then one operator.
 
@@ -23,16 +24,25 @@ Textview with inputted algorithm to be calculated when finished.
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentTop="true"
-	    android:layout_marginTop="14dp"
+	    android:layout_marginTop="2dp"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <TextView
+        android:id="@+id/currentAlgorithm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/linearLayout1"
+        android:layout_alignRight="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="14dp"
+        android:text="" />
     	
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="65dp"
         android:orientation="horizontal" >
 
         <Button
@@ -67,7 +77,6 @@ Textview with inputted algorithm to be calculated when finished.
         android:layout_alignLeft="@+id/linearLayout1"
         android:layout_alignRight="@+id/linearLayout1"
         android:layout_below="@+id/linearLayout1"
-        android:layout_weight="1"
         android:orientation="horizontal" >
 
         <Button
@@ -102,7 +111,6 @@ Textview with inputted algorithm to be calculated when finished.
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/linearLayout2"
         android:layout_below="@+id/linearLayout2"
-        android:layout_weight="1"
         android:orientation="horizontal" >
 
         <Button
@@ -130,7 +138,6 @@ Textview with inputted algorithm to be calculated when finished.
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/linearLayout3"
         android:layout_below="@+id/linearLayout3"
-        android:layout_weight="1"
         android:orientation="horizontal" >
 
         <Button
@@ -158,7 +165,6 @@ Textview with inputted algorithm to be calculated when finished.
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/linearLayout4"
         android:layout_below="@+id/linearLayout4"
-        android:layout_weight="1"
         android:orientation="horizontal" >
 
         <Button
@@ -188,5 +194,6 @@ Textview with inputted algorithm to be calculated when finished.
             android:layout_below="@+id/linearLayout5"
             android:layout_marginTop="22dp"
             android:text="About" />
+
 
 </RelativeLayout>
