--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 
+Author: Björn Kristensson Alfsson
+Version: 1.3
+Date: 2014-06-30
+Last updated: 2014-06-30 
+Description: Color file for calculator application.
+ -->
 <resources>
-<color name="red">#ffff00</color>    
+<color name="red">#ff0000</color>    
 </resources>
